--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,21 @@ body{
 
 .Principal{
     background-color: rgb(255,255,255);
+    margin: 150px 100px;
+    border-radius: 5%;
+    height: 500px;
+    padding: 30px;
 }
 
 img{
     color: rgb(66,105,226);
+}
+.Encabezado{
+    text-align: center;
+}
+.Services{
+    color: rgb(116,144,233);
+}
+.Servicios1, .Servicios2{
+    display: flex
 }
