--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,15 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    color:rgb(13, 12, 34);
 }
 body{
     background-color: rgb(206,214,240);
+}
+h1{
+    font-size: 30px;
 }
 main{
     display: flex;
@@ -31,7 +37,22 @@ main{
     justify-content: space-evenly;
 }
 .div{
-    border: 5px solid red;
+    margin: 10px;
     height: 150px;
     width: 300px;
+}
+.imagenes{
+    height: 40px;
+    width: 40px;
+    background-color: rgb(66,105,226);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+img{
+    
+    height: 20px;
+    width: 20px;
 }
